# humor-project

./: README.md  generate_sae_figures.py  modal_gemma.py  modal_runner.py  pyproject.toml  run_sae_experiment.py
.idea-explorer/: idea.yaml
datasets/: dataset_a_paired.xlsx  dataset_b_randomized.xlsx  model_outputs.xlsx
gemma-2-2b/: config.json  dataset_comparison.json  gemma-2-2b_sae_complete_experiment.json  gemma-2-2b_sae_features.json  humor_direction.pt  intervention_results.json  probe_results.csv  probe_summary.json  rank_analysis.json
gemma-2-2b/directions/: best_layer15.pt  layer0.pt  layer1.pt  layer10.pt  layer11.pt  layer12.pt  layer13.pt  layer14.pt  layer15.pt  layer16.pt  layer17.pt  layer18.pt  layer19.pt  layer2.pt  layer20.pt  layer21.pt  layer22.pt  layer23.pt  layer24.pt  layer25.pt  layer3.pt  layer4.pt  layer5.pt  layer6.pt  layer7.pt  layer8.pt  layer9.pt  summary.json
gemma-2-2b/sae_results/layer_15/: gemma-2-2b_sae_complete_experiment.json  gemma-2-2b_sae_features.json
gemma-2-2b/sae_results/layer_16/: gemma-2-2b_sae_complete_experiment.json  gemma-2-2b_sae_features.json
gemma-2-2b/sae_results/layer_17/: gemma-2-2b_sae_complete_experiment.json  gemma-2-2b_sae_features.json
results/: config.json  dataset_comparison.json  gemma-2-2b_sae_complete_experiment.json  gemma-2-2b_sae_features.json  humor_direction.pt  intervention_results.json  probe_results.csv  rank_analysis.json  sae_features.json
src/: experiment.py  generate_sae_figures.py  intervention_tests.py  modal_runner.py  run_all_models.py  run_sae_experiment.py  sae_analysis.py
(+6 files in other folders)
