[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for humor recognition in LLMs"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "jaxtyping>=0.3.5",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.4",
    "transformers>=4.57.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
